se modifica seccion registro

--- a/Sections/registro.html
+++ b/Sections/registro.html
@@ -29,7 +29,8 @@
     </header>
         <footer>
             <form action="" method="post">
-                <h1>Registro</h1>
+                <h1 tituloRegistro>Registro</h1>
+                <h2 aclaracionRegistro>A continuacion podras registrarte dentro de nuestra web para poder realizar compras y recibir descuentos exclusivos a travez de tu correo electronico :)</h2>
                 <label for="">Nombre:</label>
                 <input type="text" name="nombre">
                 <label for="">Edad:</label>
