se modifican todas las secciones faltaria aplicar sass al 100%

--- a/Sections/registro.html
+++ b/Sections/registro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imagenes/minimalnotion1.png">
-    <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,8 +29,7 @@
     </header>
         <footer>
             <form action="" method="post">
-                <h1 tituloRegistro>Registro</h1>
-                <h2 aclaracionRegistro>A continuacion podras registrarte dentro de nuestra web para poder realizar compras y recibir descuentos exclusivos a travez de tu correo electronico :)</h2>
+                <h1>Registro</h1>
                 <label for="">Nombre:</label>
                 <input type="text" name="nombre">
                 <label for="">Edad:</label>
@@ -39,8 +38,7 @@
                 <input type="text" name="correo">
                 <input type="submit" name="submit">
             </form>
-                </section>
-                <section id="footer">
+            <section class="footer">
                 <div class="container">
                     <img class="footerImg" src="../imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
                     <ul class="list-inline">
@@ -58,5 +56,13 @@
                     <p>Copyright ©2021 – MINIMAL NOTION – Designed By SantiV</p>
                 </div>
             </section>
+    <!--Aos js-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!--BOOTSTRAP 4.6 JS-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 </html>
