--- a/Sections/Ustedes.html
+++ b/Sections/Ustedes.html
@@ -5,67 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imagenes/minimalnotion1.png">
-    <link rel="stylesheet" href="../CSS/estilos.css">
+        <!--Bostrap 4.6v-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        <!--Aos-->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">    
+    <link rel="stylesheet" href="../css/main.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <header class="headerUstedes">
-            <h1 class="titInicialMinimal">MINIMAL</h1>
-            ENCABEZADO
-            <nav class="nav">
-                <nav class="navegacion">
-                    <ul class="menu">
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="tienda.html">Tienda</a>
-                            <ul class="submenu">
-                                <li><a href="tienda.html">Hombre</a></li>
-                                <li><a href="tienda.html">Mujer</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="Ustedes.html">Ustedes</a></li>
-                        <li><a href="registro.html">Registro</a></li>
-                    </ul>
-                </nav>
-        </header>
-        <div class="seccion1">SECTION1
-            <h2 class="h2Ustedes">USTEDES</h2>
-        <img class="sectionUstedesImg2" src="../imagenes/logoNotionW.png" alt="">
-        </div>
-        <div class="seccion2">SECTION2
-            <h2 class="h2Ustedes">USTEDES</h2>
-        <img class="sectionUstedesImg2" src="../imagenes/logoNotionW.png" alt="">
-        </div>
-        <div class="seccion3">SECTION3
-            <h2 class="h2Ustedes">USTEDES</h2>
-        <img class="sectionUstedesImg2" src="../imagenes/logoNotionW.png" alt="">
-        </div>
-        <div class="seccion4">SECTION4
-            <h2 class="h2Ustedes">USTEDES</h2>
-        <img class="sectionUstedesImg2" src="../imagenes/logoNotionW.png" alt="">
-        </div>
-        <footer class="footerUstedes">
-        </section>
-        <section id="footer">
-        <div class="container">
-            <img class="footerImg" src="../imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-            </ul>
-            <ul class="list-inline">
-                <li class="list-inline-item footer-menu"><a href="">Productos</a></li>
-                <li class="list-inline-item footer-menu"><a href="">Sobre nosotros</a></li>
-                <li class="list-inline-item footer-menu"><a href="">Ustedes</a></li>
-                <li class="list-inline-item footer-menu"><a href="">Contacto</a></li>
-            </ul>
-        </div>
-        <div class="footerb">
-            <p>Copyright ©2021 – MINIMAL NOTION – Designed By SantiV</p>
-        </div>
-    </section>
-            FOOTER</footer>
-    </div>
+    <header>
+        <h1 class="titInicialMinimal">MINIMAL</h1>
+    <nav class="nav">
+		<nav class="navegacion">
+			<ul class="menu">
+				<li><a href="../index.html">Inicio</a></li>
+				<li><a href="nosotros.html">Nosotros</a></li>
+				<li><a href="tienda.html">Tienda</a>
+					<ul class="submenu">
+						<li><a href="tienda.html">Hombre</a></li>
+						<li><a href="tienda.html">Mujer</a></li>
+					</ul>
+				</li>
+                <li><a href="Ustedes.html">Ustedes</a></li>
+				<li><a href="registro.html">Registro</a></li>
+			</ul>
+            <div class="card-group">
+                <div class="card">
+                <img src="../imagenes/logoNotionW.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">cliente ej</h5>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+                </div>
+                <div class="card">
+                <img src="../imagenes/logoNotionW.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">cliente ej</h5>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+                </div>
+                <div class="card">
+                <img src="../imagenes/logoNotionW.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">cliente ej</h5>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+                </div>
+            </div>
+        <section class="footer">
+            <div class="container">
+                <img class="footerImg" src="../imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+                <ul class="list-inline">
+                    <li class="list-inline-item footer-menu"><a href="">Productos</a></li>
+                    <li class="list-inline-item footer-menu"><a href="">Sobre nosotros</a></li>
+                    <li class="list-inline-item footer-menu"><a href="">Ustedes</a></li>
+                    <li class="list-inline-item footer-menu"><a href="">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="footerb">
+                <p>Copyright ©2021 – MINIMAL NOTION – Designed By SantiV</p>
+            </div>
+    <!--Aos js-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!--BOOTSTRAP 4.6 JS-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 </html>
