--- a/Sections/tienda.html
+++ b/Sections/tienda.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imagenes/minimalnotion1.png">
-    <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Productos</title>
 </head>
 <body>
@@ -33,28 +33,28 @@
 </div class>
 
 <div class="card">
-    <img src="../imagenes/Basica blanca hombre .jpg" class="card-media" />
+    <img src="../imagenes/Basica blanca hombre .jpg" class="card-media" width="30%" height="30%"/>
     <div class="card-details">
     <h2 class="card-head">Remera basica</h2>
     <p>Remera basica de algodon color blanco</p>
     <a href="#/" class="card-action-button">COMPRAR</a>
     </div>
 
-    <img src="../imagenes/Basica blanca hombre .jpg" class="card-media" />
+    <img src="../imagenes/Basica blanca hombre .jpg" class="card-media"  width="30%" height="30%"/>
     <div class="card-details">
     <h2 class="card-head">Remera basica</h2>
     <p>Remera basica de algodon color blanco</p>
     <a href="#/" class="card-action-button">COMPRAR</a>
     </div>
 
-    <img src="../imagenes/Basica blanca hombre .jpg" class="card-media" />
+    <img src="../imagenes/Basica blanca hombre .jpg" class="card-media" width="30%" height="30%"/>
     <div class="card-details">
     <h2 class="card-head">Remera basica</h2>
     <p>Remera basica de algodon color blanco</p>
     <a href="#/" class="card-action-button">COMPRAR</a>
     </div>
 
-    <img src="../imagenes/Basica blanca hombre .jpg" class="card-media" />
+    <img src="../imagenes/Basica blanca hombre .jpg" class="card-media" width="30%" height="30%"/>
     <div class="card-details">
     <h2 class="card-head">Remera basica</h2>
     <p>Remera basica de algodon color blanco</p>
@@ -64,21 +64,24 @@
 <header>
 </header>
 </section>
-<section id="footer">
-<div class="container">
-    <img class="footerImg" src="../imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
-    <ul class="list-inline">
-        <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-        <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-    </ul>
-    <ul class="list-inline">
-        <li class="list-inline-item footer-menu"><a href="">Inico</a></li>
-        <li class="list-inline-item footer-menu"><a href="">Nosotros</a></li>
-        <li class="list-inline-item footer-menu"><a href="">Tienda</a></li>
-        <li class="list-inline-item footer-menu"><a href="">Registro</a></li>
-    </ul>
-</div>
-<div class="footerb">
+<section class="footer">
+    <div class="container">
+        <img class="footerImg" src="../imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+        <ul class="list-inline">
+            <li class="list-inline-item footer-menu"><a href="">Productos</a></li>
+            <li class="list-inline-item footer-menu"><a href="">Sobre nosotros</a></li>
+            <li class="list-inline-item footer-menu"><a href="">Ustedes</a></li>
+            <li class="list-inline-item footer-menu"><a href="">Contacto</a></li>
+        </ul>
+    </div>
+    <div class="footerb">
+        <p>Copyright ©2021 – MINIMAL NOTION – Designed By SantiV</p>
+    </div>
+</section>
     <p>Copyright ©2021 – MINIMAL NOTION – Designed By SantiV</p>
 </div>
 </section>
