--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,10 @@
     <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!--Bostrap 4.6v-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!--Aos-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Source+Sans+3:ital,wght@1,700&display=swap" rel="stylesheet">
     <!--FONT AWESOME-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -22,7 +26,7 @@
             <h1 class="titInicialMinimal">MINIMAL</h1>
             <div class="containerAnimacion">
                 <div class="agrandar">
-                    <img src="imagenes/minimalnotion1-PhotoRoom.png" alt="" height="80px" width="80px" >
+                    <img src="imagenes/minimalnotion1-PhotoRoom.png" alt="" height="80px" width="80px" data-aos="fade-right" data-aos-duration="3000">
                 </div>
             </div>
             <nav class="nav">
@@ -41,44 +45,54 @@
                     </ul>
                 </nav>
         </header>
-    </div>
-        <div class="banner">
-        <div class="banner">
-            <h1 class="bannerTitle">We bring the basic, you make the difference.</h1>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="imagenes/perchero carrousel .png" class="d-block w-100" alt="..." width="20%" height="20%">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/remeras verdes carrousel.jpg" class="d-block w-100" alt="..."width="20%" height="20%">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/carrousel remeras miztas.jpg" class="d-block w-100" alt="..."width="20%" height="20%">
+            </div>
+            </div>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+            </button>
         </div>
-            <!--breve explicacion de los productos-->
-        <section class="section1">
-            <div class="section1Texto">
-                <h2 class="section1Title">Lorem ipsum dolor sit </h2>
-                <p class="section1Descrip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ipsam, voluptas numquam fuga voluptatem quod? Voluptatem, asperiores deserunt esse unde, odit voluptatum reiciendis distinctio pariatur facere minima obcaecati ut similique.</p>
-            </div>
-            <div class="section1Img">
-                <img class="section1Img" src="imagenes/Minimal Inicio.png" alt="logo" height="50%" width="30%">
-            </div>
-    </div>
         <div class="info-a-compradores">
             <h2>Las prendas de minimal son elaboras con tela de alta calidad ideal para la mayor de las comodidaes en el dia a dia</h2>
-    
-    </div>
-        <div class="footer">
-            <div class="container">
-                <img class="footerImg" src="imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
-                <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-                <ul class="list-inline">
-                    <li class="list-inline-item footer-menu"><a href="">Productos</a></li>
-                    <li class="list-inline-item footer-menu"><a href="">Sobre nosotros</a></li>
-                    <li class="list-inline-item footer-menu"><a href="">Ustedes</a></li>
-                    <li class="list-inline-item footer-menu"><a href="">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="footerb">
-                <p>Copyright ©2021 – MINIMAL NOTION – Designed By SantiV</p>
-            </div>
-        </section>
-    </div>
-    </div>
+            <section class="footer">
+                <div class="container">
+                    <img class="footerImg" src="imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                    <ul class="list-inline">
+                        <li class="list-inline-item footer-menu"><a href="">Productos</a></li>
+                        <li class="list-inline-item footer-menu"><a href="">Sobre nosotros</a></li>
+                        <li class="list-inline-item footer-menu"><a href="">Ustedes</a></li>
+                        <li class="list-inline-item footer-menu"><a href="">Contacto</a></li>
+                    </ul>
+                </div>
+                <div class="footerb">
+                    <p>Copyright ©2021 – MINIMAL NOTION – Designed By SantiV</p>
+                </div>
+            </section>
+    <!--Aos js-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!--BOOTSTRAP 4.6 JS-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 </html>
