--- a/index.html
+++ b/index.html
@@ -67,6 +67,34 @@
         </div>
         <div class="info-a-compradores">
             <h2>Las prendas de minimal son elaboras con tela de alta calidad ideal para la mayor de las comodidaes en el dia a dia</h2>
+            <!--alinear en css las cartas-->
+            <div class="card bg-dark text-white">
+                <img src="imagenes/Chico cadena.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Last updated 3 mins ago</p>
+                </div>
+            </div>
+            </div>
+            <div class="card bg-dark text-white">
+                <img src="imagenes/Chico cadena.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Last updated 3 mins ago</p>
+                </div>
+            </div>
+            </div>
+            <div class="card bg-dark text-white">
+                <img src="imagenes/Chico cadena.jpg" class="card-img" alt="...">
+                <div class="card-img-overlay">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Last updated 3 mins ago</p>
+                </div>
+            </div>
+            </div>
             <section class="footer">
                 <div class="container">
                     <img class="footerImg" src="imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
