modificacion proyecto final

--- a/Sections/Ustedes.html
+++ b/Sections/Ustedes.html
@@ -29,6 +29,11 @@
                 <li><a href="Ustedes.html">Ustedes</a></li>
 				<li><a href="registro.html">Registro</a></li>
 			</ul>
+            <div class="textoUstedes">
+                <h2">Desde Minimal usamos esta seccion para poder acercarles las fotos que nos envian nuestros clientes de los productos que les llegaron.
+                    Vos tambien podes participar! Envianos la foto de tu producto y tu nombre para aparecer en esta seccion desdicada a ustedes.
+                </h2> 
+            </div>
             <div class="card-group">
                 <div class="card">
                 <img src="../imagenes/logoNotionW.png" class="card-img-top" alt="...">
@@ -57,13 +62,13 @@
                 <img class="footerImg" src="../imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.instagram.com/minimal.notion/?hl=es-la"><i class="fab fa-instagram"></i></a></li>
                 </ul>
                 <ul class="list-inline">
-                    <li class="list-inline-item footer-menu"><a href="">Productos</a></li>
-                    <li class="list-inline-item footer-menu"><a href="">Sobre nosotros</a></li>
-                    <li class="list-inline-item footer-menu"><a href="">Ustedes</a></li>
-                    <li class="list-inline-item footer-menu"><a href="">Contacto</a></li>
+                    <li class="list-inline-item footer-menu"><a href="../Sections/tienda.html">Productos</a></li>
+                    <li class="list-inline-item footer-menu"><a href="../Sections/nosotros.html">Sobre nosotros</a></li>
+                    <li class="list-inline-item footer-menu"><a href="../Sections/Ustedes.html">Ustedes</a></li>
+                    <li class="list-inline-item footer-menu"><a href="../Sections/registro.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footerb">
