--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,53 +64,71 @@
             <span class="sr-only">Next</span>
             </button>
         </div>
-        <div class="info-a-compradores">
+        <div class="infoCompradores">
             <h2>Las prendas de minimal son elaboras con tela de alta calidad ideal para la mayor de las comodidaes en el dia a dia</h2>
             <!--alinear en css las cartas-->
+        <div class="segundoBanner">
             <div class="card bg-dark text-white">
                 <img src="imagenes/Chico cadena.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
+                <h5 class="card-title">SS22</h5>
+                <p class="card-text"></p>
+                <p class="card-text"></p>
                 </div>
             </div>
             </div>
             <div class="card bg-dark text-white">
                 <img src="imagenes/Chico cadena.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
+                <h5 class="card-title">SS22</h5>
+                <p class="card-text"></p>
+                <p class="card-text"></p>
                 </div>
             </div>
             </div>
-            <div class="card bg-dark text-white">
-                <img src="imagenes/Chico cadena.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text">Last updated 3 mins ago</p>
+            <div class="segundoBanner">
+                <div class="card bg-dark text-white">
+                    <img src="imagenes/Chico cadena.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                    <h5 class="card-title">SS22</h5>
+                    <p class="card-text"></p>
+                    <p class="card-text"></p>
+                    </div>
                 </div>
-            </div>
-            </div>
+                </div>
+                <div class="segundoBanner">
+                    <div class="card bg-dark text-white">
+                        <img  src="imagenes/Chico cadena.jpg"class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                        <h5 class="card-title">SS22</h5>
+                        <p class="card-text"></p>
+                        <p class="card-text"></p>
+                        </div>
+                    </div>
+                    </div>
+        </div>
+    <div class="videoIndex" width="640" height="480">
+        <video src="imagenes/NavidadMinimal.mp4" autoplay muted loop></video>
+    </div>
             <section class="footer">
                 <div class="container">
                     <img class="footerImg" src="imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
                     <ul class="list-inline">
                         <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.instagram.com/minimal.notion/?hl=es-la"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                     <ul class="list-inline">
-                        <li class="list-inline-item footer-menu"><a href="">Productos</a></li>
-                        <li class="list-inline-item footer-menu"><a href="">Sobre nosotros</a></li>
-                        <li class="list-inline-item footer-menu"><a href="">Ustedes</a></li>
-                        <li class="list-inline-item footer-menu"><a href="">Contacto</a></li>
+                        <li class="list-inline-item footer-menu"><a href="Sections/tienda.html">Productos</a></li>
+                        <li class="list-inline-item footer-menu"><a href="Sections/nosotros.html">Sobre nosotros</a></li>
+                        <li class="list-inline-item footer-menu"><a href="Sections/Ustedes.html">Ustedes</a></li>
+                        <li class="list-inline-item footer-menu"><a href="Sections/registro.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footerb">
                     <p>Copyright ©2021 – MINIMAL NOTION – Designed By SantiV</p>
                 </div>
+                <style>
+                </style>
             </section>
     <!--Aos js-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
