--- a/Sections/tienda.html
+++ b/Sections/tienda.html
@@ -69,13 +69,13 @@
         <img class="footerImg" src="../imagenes/minimalnotion1-PhotoRoom.png" alt="logo">
         <ul class="list-inline">
             <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com/minimal.notion/?hl=es-la"><i class="fab fa-instagram"></i></a></li>
         </ul>
         <ul class="list-inline">
-            <li class="list-inline-item footer-menu"><a href="">Productos</a></li>
-            <li class="list-inline-item footer-menu"><a href="">Sobre nosotros</a></li>
-            <li class="list-inline-item footer-menu"><a href="">Ustedes</a></li>
-            <li class="list-inline-item footer-menu"><a href="">Contacto</a></li>
+            <li class="list-inline-item footer-menu"><a href="../Sections/tienda.html">Productos</a></li>
+            <li class="list-inline-item footer-menu"><a href="../Sections/nosotros.html">Sobre nosotros</a></li>
+            <li class="list-inline-item footer-menu"><a href="../Sections/Ustedes.html">Ustedes</a></li>
+            <li class="list-inline-item footer-menu"><a href="../Sections/registro.html">Contacto</a></li>
         </ul>
     </div>
     <div class="footerb">
